--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@react-oauth/google": "^0.13.4",
         "axios": "^1.6.2",
         "date-fns": "^2.30.0",
         "framer-motion": "^12.29.3",
