auth 2.0 and profile management customization

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -4,3 +4,4 @@ node_modules/
 .DS_Store
 coverage/
 dist/
+client_secret_548198852006-1fsohnkvi2eqo8121hmt1gi1g0r0ufhs.apps.googleusercontent.com.json
